# loopx

./: .gitignore  AGENTS.md  AUTHORS.md  CONTRIBUTING.md  CONTRIBUTOR_TASKS.md  GOVERNANCE.md  LICENSE  README.md  README.zh-CN.md  TRADEMARKS.md  pyproject.toml
docs/: README.md  architecture.md  attention-queue.md  authority-source-registration.md  benchmark-developer-workflow.md  codex-cli-long-run-benchmark-design.md  codex-cli-long-run-regression.md  codex-subagent-orchestration.md  commit-readiness-manifest-20260606.md  complex-project-readonly-adapter.md  dashboard-budget-governance-contract.md  dashboard-frontend-selection.md  dashboard-reward-write-boundary.md  dreaming-exploration-lane.md  experiment-controller-milestone.md  field-derived-patterns.md  frontstage-channel-lease-roadmap.md  heartbeat-automation-prompt.md  integration.md  interaction-pattern-catalog.md  interface-budget-contract.md  lark-kanban-control-plane-adapter.md  long-horizon-agent-benchmark-roadmap.md  long-task-cadence-policy.md  new-project-codex-prompt.md  project-agent-todo-contract.md  public-private-boundary.md  quota-allocation.md  reward-gate-direct-write-contract.md  runtime-connector-catalog.md  session-runtime-control-plane-adapter.md  state-interaction-model.md  status-data-contract.md  worker-bridge-install-contract.md
examples/: active-goal-state.example.md  active-state-interface-budget-smoke.py  active-user-assisted-pilot-append-cli-smoke.py  active-user-assisted-pilot-smoke.py  active-user-codex-simulator-contract-smoke.py  agent-diagnose-packet-smoke.py  (+497 more)
loopx/: cli.py  (+97 more)
(+1307 files in other folders)
