[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "loopx"
version = "0.1.2"
description = "A lightweight Loop Engineering control plane for long-running agent goals."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "LoopX contributors" }]
dependencies = []

[project.scripts]
loopx = "loopx.cli:main"

[tool.setuptools.packages.find]
include = ["loopx*"]
